# jam

./: LICENSE  README.md  jam.cabal
_tutorial/: jam.cabal
_tutorial/src/: binop_test_1.core  test.core
_tutorial/src/Jam/: Language.hs  Util.hs
_tutorial/src/Jam/G/Evaluator/: Print.hs
_tutorial/src/Jam/G/Util/: Compiler.hs
_tutorial/src/Jam/Language/: Core.hs
_tutorial/src/Jam/Parser/: Core.hs  Lexer.hs
_tutorial/src/Jam/Template/: Evaluator.hs
_tutorial/src/Jam/Template/Evaluator/: Print.hs
_tutorial/src/Jam/Template/Util/: Compiler.hs
_tutorial/src/Jam/Util/: Core.hs  Parser.hs
app/: Main.hs
src/: .Jam.hs.swp  .graph_ex_1.core.swp  .parse_test_1.core.swp  Jam.hs  binop_test_1.core  graph_ex_1.core  jam_test.jam  parse_test_1.core
src/Jam/: .Evaluator.hs.swp  Compiler.hs  Evaluator.hs  Parser.hs  Simplify.hs  Util.hs
src/Jam/Evaluator/: .Core.hs.swp  Core.hs  Print.hs
src/Jam/G/: Compiler.hs  Evaluator.hs
src/Jam/G/Compiler/: Core.hs
src/Jam/G/Evaluator/: Core.hs  Print.hs
src/Jam/G/Util/: Compiler.hs
src/Jam/Language/: .Core.hs.swp  Core.hs  Jam.hs
src/Jam/Language/Jam/: Core.hs  Operators.hs
src/Jam/Language/Jam/Operators/: Core.hs
src/Jam/Language/Lambda/: Enriched.hs  Simple.hs
src/Jam/Language/Lambda/Enriched/: Core.hs  Pretty.hs
src/Jam/Language/Lambda/Simple/: Core.hs
src/Jam/Parser/: Core.hs  Lexer.hs  Syntax.hs
src/Jam/Simplify/: Enriched.hs  Jam.hs
src/Jam/Template/: Compiler.hs  Evaluator.hs
src/Jam/Template/Evaluator/: Core.hs  Print.hs
src/Jam/Template/Util/: Compiler.hs
src/Jam/Util/: .Compiler.hs.swp  .Core.hs.swp  .Language.hs.swp  .Parser.hs.swp  Compiler.hs  Helpers.hs  Language.hs  Parser.hs  PrettyPrinter.hs
