name:                jam
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/jam#readme
license:             BSD3
license-file:        LICENSE
author:              Jasper Haag
maintainer:          jhaag@mit.edu
copyright:           2016 Jasper Haag
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jam
                     , Jam.Language.Jam
                     , Jam.Language.Lambda.Enriched
                     , Jam.Language.Lambda.Simple
                     , Jam.Parser
                     , Jam.Simplify
  other-modules:       Jam.Language.Jam.Core
                     , Jam.Language.Jam.Operators
                     , Jam.Language.Jam.Operators.Core
                     , Jam.Language.Lambda.Enriched.Core
                     , Jam.Language.Lambda.Enriched.Pretty
                     , Jam.Language.Lambda.Simple.Core
                     , Jam.Parser.Core
                     , Jam.Parser.Lexer
                     , Jam.Parser.Syntax
                     , Jam.Simplify.Enriched
                     , Jam.Simplify.Jam
                     , Jam.Util.Helpers
                     , Jam.Util.Language
                     , Jam.Util.Parser
                     , Jam.Util.PrettyPrinter
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable jam-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jam
  default-language:    Haskell2010

test-suite jam-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jam
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/jam
