name:                jam
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/jam#readme
license:             BSD3
license-file:        LICENSE
author:              Jasper Haag
maintainer:          jhaag@mit.edu
copyright:           2016 Jasper Haag
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jam
                     , Jam.Language
                     , Jam.Library.Prelude
                     , Jam.Library.Print
                     , Jam.Parser
                     , Jam.Util
  other-modules:       Jam.Language.Core
                     , Jam.Parser.Core
                     , Jam.Parser.Lexer
                     , Jam.Parser.Syntax
                     , Jam.Util.Core
                     , Jam.Util.Language
                     , Jam.Util.Parser
                     --| Different versions of the compiler
                     --* Template
                     , Jam.Template.Compiler
                     , Jam.Template.Evaluator
                     , Jam.Template.Evaluator.Core
                     , Jam.Template.Evaluator.Print
                     , Jam.Template.Library.Prelude
                     , Jam.Template.Util.Compiler
                     --* G-machine
                     , Jam.G.Compiler
                     , Jam.G.Compiler.Core
                     , Jam.G.Evaluator
                     , Jam.G.Evaluator.Core
                     , Jam.G.Evaluator.Print
                     , Jam.G.Library.Prelude
                     , Jam.G.Util.Compiler
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable jam-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jam
  default-language:    Haskell2010

test-suite jam-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jam
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/jam
